<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Week View</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_add">Add Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Add Event Strings -->
    <string name="toolbar_add_event">Add Event</string>
    <string name="title_add_event">Title</string>
    <string name="all_day__add_event">All Day</string>
    <string name="date_add_event">Date</string>
    <string name="start_time_add_event">Start</string>
    <string name="end_time_add_event">End</string>
    <string name="location_add_event">Location</string>
    <string name="description_add_event">Description</string>
    <string name="repeat_add_event">Repeat</string>
    <string name="repeat_number_add_event">Repeat For</string>
    <string name="alert_add_event">Alert</string>
    <string name="submit">Submit</string>

    <string name="event_repeat_prompt">Repeat Prompt</string>
    <string-array name="event_repeat_options">
        <item>Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>





</resources>
